--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-loader": "^8.0.6",
     "css-loader": "^2.1.1",
     "node-sass": "^4.12.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-cli": "^6.1.2",
     "postcss-loader": "^3.0.0",
     "sass": "^1.20.1",
