--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "summer-todo-list",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "A simple, elegant and cool TODO list web application.",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
