Create some scripts

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A simple, elegant and cool TODO list web application.",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npx webpack --config webpack.config.js",
+    "build:watch": "npx webpack -w --config webpack.config.js",
+    "build:prod": "npx webpack --config webpack.prod.js"
   },
   "repository": {
     "type": "git",
